# mean_ci

./: Cargo.toml  README.md  data.txt
src/: data.rs  evaluate.rs  main.rs
src/scrapers/: aoty_scraper.rs  mod.rs
src/websites/: aoty.rs  mod.rs
