[package]
name = "mean_ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = "0.11"
special-fun = "0.2.0"
scraper = "0.16.0"
tokio = {version = "1", features = ["full"]}
regex = "1.10.3"
